// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`variables-menu Renders \`variables-menu\` with custom props 1`] = `
<div
  class="v-menu"
>
  <transition-stub
    name="v-menu-transition"
  />
</div>
`;

exports[`variables-menu Renders \`variables-menu\` with custom props 2`] = `
<div
  class="v-menu__content theme--light menuable__content__active "
  role="menu"
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8; display: none;"
>
  <variables-list-stub
    childrenkey="variables"
    dense="true"
    items="[object Object]"
    value="entity._id"
  />
</div>
`;

exports[`variables-menu Renders \`variables-menu\` with default props 1`] = `
<div
  class="v-menu"
>
  <!---->
</div>
`;

exports[`variables-menu Renders \`variables-menu\` with default props 2`] = `undefined`;
